sort of successful container running

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,6 +8,6 @@ services:
     volumes:
       - /home/clay/ros:/home/ros
       - /home/clay/arachne:/ros2
-    devices:
+    #devices:
 
     tty: true
