--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -44,15 +44,75 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     && rm -rf /var/lib/apt/lists/*
 
+
 # install packages required for camera feed
 RUN apt update \
     && apt install -y --no-install-recommends \
-    libcap-dev \
-    && apt install -y --no-install-recommends \
-    ros-jazzy-camera-ros
+    python3-pip git python3-jinja2
 
+# more dependencies teehee
+RUN apt install -y --no-install-recommends \
+    libepoxy-dev \
+    libjpeg-dev \
+    libtiff5-dev \
+    libpng-dev \
+    libopencv-dev
+
+RUN apt install -y --no-install-recommends \
+    qtbase5-dev \
+    libqt5core5a \
+    libqt5gui5 \
+    libqt5widgets5 \
+    libavcodec-dev \
+    libavdevice-dev \
+    libavformat-dev \
+    libswresample-dev
+
+
+# install one bajillion libcamera dependencies
+RUN apt install -y --no-install-recommends \
+    libboost-dev \
+    libgnutls28-dev openssl libtiff5-dev pybind11-dev \
+    qtbase5-dev libqt5core5a libqt5gui5 libqt5widgets5 \
+    meson cmake \
+    python3-yaml python3-ply \
+    libglib2.0-dev libgstreamer-plugins-base1.0-dev
+
+# clone and build libcamera
+RUN git clone https://github.com/raspberrypi/libcamera.git \
+    && cd libcamera \
+    && meson setup build --buildtype=release -Dpipelines=rpi/vc4,rpi/pisp -Dipas=rpi/vc4,rpi/pisp -Dv4l2=true -Dgstreamer=enabled -Dtest=false -Dlc-compliance=disabled -Dcam=disabled -Dqcam=disabled -Ddocumentation=disabled -Dpycamera=enabled \
+    && ninja -C build \
+    && ninja -C build install
+
+
+# build rpicam-apps 
+RUN apt install -y --no-install-recommends cmake libboost-program-options-dev \
+    libdrm-dev \
+    libexif-dev \
+    meson \
+    ninja-build
+
+RUN cd ../ && \
+    git clone https://github.com/raspberrypi/rpicam-apps.git \
+    && cd rpicam-apps \
+    && meson setup build -Denable_libav=enabled -Denable_drm=enabled -Denable_egl=enabled -Denable_qt=enabled -Denable_opencv=disabled -Denable_tflite=disabled -Denable_hailo=disabled \
+    && meson compile -C build \
+    && meson install -C build
+
+# Configure dynamic linker run-time bindings
+RUN ldconfig
+
+# ONE LAST DEPENDENCY GODDAMMIT
+RUN apt install -y --no-install-recommends \
+    libcap-dev
+
+# ok now our python packages
 COPY requirements.txt .
 RUN pip3 install -r requirements.txt --break-system-packages
+
+# Just to make sure everything is working
+RUN rpicam-still --version > test.txt
 
 ENTRYPOINT ["/ros_entrypoint.sh"]
 CMD ["bash"]
