--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,6 +32,12 @@ ENV LC_ALL=C.UTF-8
 
 ENV ROS_DISTRO=jazzy
 
+# Set up headless camera operation
+ENV DISPLAY=:99
+ENV LIBCAMERA_LOG_LEVELS=ERROR
+ENV LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib/aarch64-linux-gnu:$LD_LIBRARY_PATH
+ENV PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:/usr/local/lib/aarch64-linux-gnu/pkgconfig:$PKG_CONFIG_PATH
+
 # install ros2 packages
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ros-jazzy-ros-core=0.11.0-1* \
@@ -56,7 +62,11 @@ RUN apt install -y --no-install-recommends \
     libjpeg-dev \
     libtiff5-dev \
     libpng-dev \
-    libopencv-dev
+    libopencv-dev \
+    python3-opencv \
+    kmod \
+    v4l-utils \
+    ffmpeg
 
 RUN apt install -y --no-install-recommends \
     qtbase5-dev \
@@ -78,41 +88,87 @@ RUN apt install -y --no-install-recommends \
     python3-yaml python3-ply \
     libglib2.0-dev libgstreamer-plugins-base1.0-dev
 
+RUN apt install -y --no-install-recommends cmake libboost-program-options-dev \
+    libdrm-dev \
+    libexif-dev \
+    meson \
+    ninja-build \
+    pkg-config 
+
 # clone and build libcamera
 RUN git clone https://github.com/raspberrypi/libcamera.git \
     && cd libcamera \
     && meson setup build --buildtype=release -Dpipelines=rpi/vc4,rpi/pisp -Dipas=rpi/vc4,rpi/pisp -Dv4l2=true -Dgstreamer=enabled -Dtest=false -Dlc-compliance=disabled -Dcam=disabled -Dqcam=disabled -Ddocumentation=disabled -Dpycamera=enabled \
     && ninja -C build \
-    && ninja -C build install
+    && ninja -C build install > libcam_ninja.log
 
 
 # build rpicam-apps 
-RUN apt install -y --no-install-recommends cmake libboost-program-options-dev \
-    libdrm-dev \
-    libexif-dev \
-    meson \
-    ninja-build
-
 RUN cd ../ && \
     git clone https://github.com/raspberrypi/rpicam-apps.git \
     && cd rpicam-apps \
-    && meson setup build -Denable_libav=enabled -Denable_drm=enabled -Denable_egl=enabled -Denable_qt=enabled -Denable_opencv=disabled -Denable_tflite=disabled -Denable_hailo=disabled \
+    && meson setup build \
+    -Denable_libav=enabled -Denable_drm=enabled \
+    -Denable_egl=enabled -Denable_qt=enabled \
+    -Denable_opencv=disabled -Denable_tflite=disabled \
+    -Denable_hailo=disabled \
     && meson compile -C build \
-    && meson install -C build
+    && meson install -C build > rpicam-meson.log
 
 # Configure dynamic linker run-time bindings
-RUN ldconfig
+RUN ldconfig > ldconfig.log
+
+# Setup raspberry pi repositories with apt - COMMENTED OUT DUE TO DEPENDENCY CONFLICTS
+# RUN echo deb http://archive.raspberrypi.org/debian/ bullseye main \ 
+#     | tee /etc/apt/sources.list.d/raspberrypi.list
+
+# RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 7FA3303E
+RUN apt-get update
 
 # ONE LAST DEPENDENCY GODDAMMIT
 RUN apt install -y --no-install-recommends \
-    libcap-dev
+    libcap-dev \
+    libfmt-dev \
+    v4l-utils
 
 # ok now our python packages
 COPY requirements.txt .
-RUN pip3 install -r requirements.txt --break-system-packages
+RUN pip3 install -r requirements.txt --break-system-packages > pip_install.log
 
-# Just to make sure everything is working
-RUN rpicam-still --version > test.txt
+# Try to install pykms for picamera2 compatibility
+RUN pip3 install pykms --break-system-packages || echo "pykms not available via pip"
+
+# Create a symbolic link for kms++ bindings if available
+RUN python3 -c "\
+try:\
+    import kms;\
+    import sys;\
+    import os;\
+    pykms_path = os.path.join(os.path.dirname(kms.__file__), '..', 'pykms.py');\
+    with open(pykms_path, 'w') as f:\
+        f.write('from kms import *\\n');\
+    print('Created pykms alias for kms');\
+except ImportError:\
+    print('kms module not available, relying on mock');\
+" || echo "Failed to create kms alias"
+
+# Just to make sure everything is working - commented out since we removed Pi repo
+# RUN rpicam-still --version > test.txt
+
+# Link our libcam install to the system python library
+RUN ln -s \
+    /usr/local/lib/aarch64-linux-gnu/python3.12/site-packages/libcamera \
+    /usr/local/lib/python3.12/dist-packages/libcamera
+
+# Create a script to load camera kernel modules
+RUN echo '#!/bin/bash\n\
+# Load camera kernel modules for Raspberry Pi Camera Module 3\n\
+modprobe imx708 2>/dev/null || echo "imx708 module already loaded or not available"\n\
+modprobe dw9807_vcm 2>/dev/null || echo "dw9807_vcm module already loaded or not available"\n\
+modprobe rp1_cfe 2>/dev/null || echo "rp1_cfe module already loaded or not available"\n\
+modprobe pisp_be 2>/dev/null || echo "pisp_be module already loaded or not available"\n\
+echo "Camera modules loaded"\n' > /load_camera_modules.sh \
+    && chmod +x /load_camera_modules.sh
 
 ENTRYPOINT ["/ros_entrypoint.sh"]
 CMD ["bash"]
